; ModuleID = '/home/carl/AnghaBench/h2o/examples/libh2o/extr_websocket.c_on_ws_message.c'
source_filename = "/home/carl/AnghaBench/h2o/examples/libh2o/extr_websocket.c_on_ws_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.wslay_event_on_msg_recv_arg = type { i32, i32, i32 }
%struct.wslay_event_msg = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, %struct.wslay_event_on_msg_recv_arg*)* @on_ws_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_ws_message(%struct.TYPE_4__* %0, %struct.wslay_event_on_msg_recv_arg* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca %struct.wslay_event_on_msg_recv_arg*, align 8
  %5 = alloca %struct.wslay_event_msg, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store %struct.wslay_event_on_msg_recv_arg* %1, %struct.wslay_event_on_msg_recv_arg** %4, align 8
  %6 = load %struct.wslay_event_on_msg_recv_arg*, %struct.wslay_event_on_msg_recv_arg** %4, align 8
  %7 = icmp eq %struct.wslay_event_on_msg_recv_arg* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = call i32 @h2o_websocket_close(%struct.TYPE_4__* %9)
  br label %34

11:                                               ; preds = %2
  %12 = load %struct.wslay_event_on_msg_recv_arg*, %struct.wslay_event_on_msg_recv_arg** %4, align 8
  %13 = getelementptr inbounds %struct.wslay_event_on_msg_recv_arg, %struct.wslay_event_on_msg_recv_arg* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @wslay_is_ctrl_frame(i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %34, label %17

17:                                               ; preds = %11
  %18 = getelementptr inbounds %struct.wslay_event_msg, %struct.wslay_event_msg* %5, i32 0, i32 0
  %19 = load %struct.wslay_event_on_msg_recv_arg*, %struct.wslay_event_on_msg_recv_arg** %4, align 8
  %20 = getelementptr inbounds %struct.wslay_event_on_msg_recv_arg, %struct.wslay_event_on_msg_recv_arg* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %18, align 4
  %22 = getelementptr inbounds %struct.wslay_event_msg, %struct.wslay_event_msg* %5, i32 0, i32 1
  %23 = load %struct.wslay_event_on_msg_recv_arg*, %struct.wslay_event_on_msg_recv_arg** %4, align 8
  %24 = getelementptr inbounds %struct.wslay_event_on_msg_recv_arg, %struct.wslay_event_on_msg_recv_arg* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %22, align 4
  %26 = getelementptr inbounds %struct.wslay_event_msg, %struct.wslay_event_msg* %5, i32 0, i32 2
  %27 = load %struct.wslay_event_on_msg_recv_arg*, %struct.wslay_event_on_msg_recv_arg** %4, align 8
  %28 = getelementptr inbounds %struct.wslay_event_on_msg_recv_arg, %struct.wslay_event_on_msg_recv_arg* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %26, align 4
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @wslay_event_queue_msg(i32 %32, %struct.wslay_event_msg* %5)
  br label %34

34:                                               ; preds = %8, %17, %11
  ret void
}

declare dso_local i32 @h2o_websocket_close(%struct.TYPE_4__*) #1

declare dso_local i32 @wslay_is_ctrl_frame(i32) #1

declare dso_local i32 @wslay_event_queue_msg(i32, %struct.wslay_event_msg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
